--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <form name="nav" class="nav__form">
                 <ul class="nav__link">
                     <li>
-                        <label for="setGuide" class="nav__label">
-                            <input type="radio" class="nav__radio" name="tab" value="setGuide" id="setGuide" checked="true"/>
+                        <label for="setGuideForm" class="nav__label">
+                            <input type="radio" class="nav__radio" name="tab" value="setGuide" id="setGuideForm" checked="true"/>
                             <div class="nav__display"></div>
                             <span class="nav__title">set guide</span>
                         </label>
                     </li>
                     <li>
-                        <label for="makeHead" class="nav__label">
-                            <input type="radio" class="nav__radio" name="tab" value="makeHead" id="makeHead" />
+                        <label for="makeHeadForm" class="nav__label">
+                            <input type="radio" class="nav__radio" name="tab" value="makeHead" id="makeHeadForm" />
                             <div class="nav__display"></div>
                             <span class="nav__title">make head</span>
                         </label>
                     </li>
                     <li>
-                        <label for="strage" class="nav__label">
-                            <input type="radio" class="nav__radio" name="tab" value="strage"  id="strage" />
+                        <label for="strageForm" class="nav__label">
+                            <input type="radio" class="nav__radio" name="tab" value="strage"  id="strageForm" />
                             <div class="nav__display"></div>
                             <span class="nav__title">strage</span>
                         </label>
